@@ -23,7 +23,7 @@ Version bump guide:
 Note: #xxxx refers to bug numbers as viewable on http://bugs.distributed.net/
 
 ==========================================================================
-Version change log: $Id: CHANGES.txt,v 1.21 2008/07/24 15:05:35 stream Exp $
+Version change log: $Id: CHANGES.txt,v 1.22 2008/08/17 06:19:04 stream Exp $
 ==========================================================================
 
 2.9000
@@ -32,6 +32,9 @@ Version change log: $Id: CHANGES.txt,v 1.21 2008/07/24 15:05:35 stream Exp $
 
 2.9016-506  new: x86: added new RC5-72 core (GO 2-pipe alt), selected for
                       P4 and Core Duo CPUs.
+            fix: cellbe: Memory corruption on heavy background activity
+                         when system is low on memory.
+            fix: cellbe: Workaround for broken SPU scheduler (#4038).
 
 2.9015-505  fix: cellbe: Memory corruption in OGR core (#4036)
             imp: x86: CPU Identification
